2005-08-10  Jeremy Cribb  <jcribb@email.unc.edu>
	* load_lasertrap_tracking.m: added back power spectrum computation.

2005-08-10  Jeremy Cribb  <jcribb@email.unc.edu>
	* load_lasertrap_tracking.m: added.  handles special needs for laser trap tracking vrpn files.

2005-07-19  Jeremy Cribb  <jcribb@email.unc.edu>
	* Changelog: fixed typo regarding date in last entry.
	* load_video_tracking: fixed similar typo in documentation.

2005-07-19  Jeremy Cribb  <jcribb@email.unc.edu>
	*	load_video_tracking: timestamps are now in unixutc format (number of secondssince 00:00:00 1970/01/01) and now two-column timestamps are handled.

2005-06-29  Jeremy Cribb  <jcribb@email.unc.edu>
	* load_video_tracking.m: makes older version imported vrpn files look like newer version imported vrpn files.

2005-06-29  Jeremy Cribb  <jcribb@email.unc.edu>
	* load_video_tracking.m: now uses video_tracking_constants for column labeling.  Fixed a 'off-by-one' bug where some beads were not counted.
	* batch_load_video_tracking.m: now uses video_tracking_constants for column labeling.

2005-06-27  Jeremy Cribb  <jcribb@email.unc.edu>
	*  get_beadmax: fixed stupid bug.  I really should have tested this first... oy

2005-06-27  Jeremy Cribb  <jcribb@email.unc.edu>
	*  get_beadmax: added.  returns the maximum bead/tracker ID in a tracked-video dataset.

2005-06-23 David Hill <dbhill@email.unc.edu>
	* batch_load_video_tracking.m: fixed bug so that tracking files to not
	* have to start at t = 0

2005-06-22  Kalpit Desai	<kvdesai@cs.unc.edu>
	* load_vrpn_tracking.m: Fixed the calculation of BeadPosition.

2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
	* video_tracking_constants.m: hid a lot of the constants for the video tracking & analysis code into this script.

2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: now you can use filemasks to aggregate several video tracks into a single data table.

2005-05-22  Jeremy Cribb <jcribb@email.unc.edu>